removed 0.8.9.2.tar.gz

--- a/INSTALL
+++ b/INSTALL
@@ -1,5 +1,5 @@
 INSTALL CHRONOJUMP
 ------------------
 
-See install page:
-http://gnome.org/projects/chronojump/installation.html
+See website:
+http://chronojump.org
