--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,10 @@
 CHANGELOG.txt
 
+5 ago 2009 (2)
+	ServerPing thread on start ends correctly now (if server is unavailable)
+	unable now to search on persons at main treeview
+	Accelerator to edit person: 'E'
+
 5 ago 2009
 	windows driver changed to CDM 2.04.16.exe (numerous bug fixes, and runs on tested systems that previous driver didn't)
 	crash fixed: when personAddMultiple in a session with speciallities defined, it crashed before.
