--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,19 @@
 CHANGELOG.txt
 
+12 ago 2009
+	Added autotools support (Andoni Morales)
+	Support to generate cross-platform Makefiles using autotools The first time you checkout the repository you need to generate the 'configure' script and the 'Makefile.in' templates by running: 
+	$ sh autogen.sh
+	This script will generate the 'configure' script and the 'Makefile.in' templates from configure.ac and Makefile.am. It will also call the 'configure' script for you, which will generate all the 'Makefile' files from the 'Makefile.in' templates. 'autogen.sh' should be called for each change in configure.ac or Makefile.am files. This script is targetted for developpers, to avoid polluting the repository with extra files. 
+	After running 'autogen.sh' once, you will usually use the following commands: 
+	$ ./configure 
+	$ make 
+	# make install 
+	You can create a tarball for the current version (stored in configure.ac) using: 
+	$ make dist 
+
+	fixed crash on start on languages with ',' as decimal (fr, fi,vi)
+
 11 ago 2009
 	change UI add/edit person: calendar bttn close to dateborn
 
