new personNotUpload to disallow a person to be uploaded from a session db: 0.71: table personNotUpload. updated sqlite diagram
improved sql status on thread management on start using allSQLCallsDoneOnSqliteThingsThread
fixed crash on languages with decimal: ',' on creation of database
better decimal separator on sqlite main

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,7 @@
 CHANGELOG.txt
 
+this file is discontinued, use git log instead (also there's a pretty function)
+
 12 ago 2009
 	windows bundle chronojump.mo moved to share/locale
 
