Doing queryServer.cs server menu / view server website server manually ping / returns online or offline bigger button to end repetitive tests
fixed four bugs:
-fixed crash on repair jump reactive with some "-1".
when a tc or tf is not present, was converted to "-" by Util.TrimDecimals(string, int)
changed and now verifying doesn't affect to other places
-fixed bug (can be a crash) on exportSession, exporting runInterval takes limited db column instead of simualted
-fixed report_web_style.css adding
-fixed multiChronopic and runAnalysis calls on menus

manual converted to book style, done pulses, MultiChronopic, preferences, AVG SD RjIndex, AVG SD QIndex. Fixed export info

supressed some debug WriteLines

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,19 @@
 TODO: 
 
+continue server menu / Query
+
+updating manual. Pending:
+-graphs 6.3, 6.1  to same theme than others
+-server
+-check all again
+
+do something to disallow to execute chronojump two times
+
+check all software (for the Util.TrimDecimals change)
+create accept license on uploading
+add accept license on uploading, and a way to retreive it from server
+
+
 website velleman put retardo de desactivacion instead of tiempo de respuesta ajustable
 
 
