db 0.71 to 0.72, all SQL dates to YYYY-MM-DD now can know years of everyone like this: SELECT (julianday('now') - julianday(dateBorn))/365.25 FROM person WHERE uniqueID = 152; all code manages dates in DateTime or sqlite format
done age on gui query server

when calendar is shown on person,
it starts showing previous value of that person (instead of current day),
except if person is new.
same for session and evaluator

uploadSession progressBar finish ok because not counts the notUpload persons

chronojump_mini writes to a file in correct dir

make clean does not delete images/chronojump_logo.png images/report_web_style.css
git added images/chronojump_logo.png images/report_web_style.css src/utilDate.cs

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 TODO: 
 
+autogen should compile chronojump_mini, but if a make clean is done then it compiles it
+
 server menu / Query: do age, put a progressBar when search
 
 updating manual. Pending:
