updated manual title

--- a/manual/chronojump_manual_es.lyx
+++ b/manual/chronojump_manual_es.lyx
@@ -53,7 +53,7 @@
 \begin_layout Title
 
 \size huge
-Manual de Chronojump en español
+Manual de Chronojump
 \size default
 
 \begin_inset Newline newline
