done barplot, lines, XY compiles without nplot stuff

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,8 @@ TODO:
 
 bug: when crash it shows to update to a version that is not last
 
+on graphs xy do that same variable cannot be checked. Also ensure XY, YX works
+
 check all software (for the Util.TrimDecimals change)
 create accept license on uploading
 add accept license on uploading, and a way to retreive it from server
