graphs improvements fixed some stats-graphs with diff name on column (if they are diff then are not detected in graph XY) barplot: colors in legend xlab and ylab fixed for all graphs xy: fixed legend, fixed when two vars are the same, done XY-YX deleted "testing" subs support for titles subttitle support (only done for RjPotencyBosco now) hidden global, jumper, rjEvo until they work dialogImageTest has more space for image

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,9 @@
 TODO: 
 
-bug: when crash it shows to update to a version that is not last
-
-on graphs xy do that same variable cannot be checked. Also ensure XY, YX works
+do multisession graphs
+fix global, jumper, rjEvolution
+continue with titles and subtitles for all graphs
+do report graphs
 
 check all software (for the Util.TrimDecimals change)
 create accept license on uploading
