report works with R graphs now, done dotchart, boxplot done avg on xy and avg, median on dotchart fixed bug: on session load/new, statistics of other sessions are deleted from report (they show before the other sesssion stat)

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,10 @@
 TODO: 
 
 do multisession graphs
-fix global, jumper, rjEvolution
+do multisession
+do stripchart
 continue with titles and subtitles for all graphs
-do report graphs
+fix global, jumper, rjEvolution
 
 check all software (for the Util.TrimDecimals change)
 create accept license on uploading
